# source

./: .travis.yml  DISCLAIMER.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  testing.md
.github/workflows/: python-publish.yml  python-testing.yml
clients/c_cpp/: CMakeLists.txt  README.md  demo.cpp  example.cpp  makefile  sal.cpp  sal.h  sal.hpp
clients/c_cpp/base64test/: base64test.cpp  makefile
clients/c_cpp/csal/: Makefile  csal.h  csal_attrib.cpp  csal_attrib.h  csal_client.h
clients/c_cpp/csal/include/csal/: csal.h
clients/c_cpp/csal/include/csal/detail/: csal_attrib.h  csal_client.h
clients/c_cpp/csal/test/: main.c
clients/c_cpp/examples/: CMakeLists.txt  demo.cpp  makefile  sal_https_client.cpp
clients/c_cpp/httpreqtest/: poco_http_client_test.cpp
clients/c_cpp/include/: sal.h  sal_client.h  sal_core.h  sal_data.h  sal_data_object.h  sal_exception.h  sal_node.h  sal_signal.h
clients/c_cpp/jsontest/: jsontest.cpp
clients/c_cpp/scripts/: build.sh  run_all_tests.sh
clients/c_cpp/src/: sal.cpp
clients/c_cpp/tests/: CMakeLists.txt  makefile  test_attributes.cpp  test_attributes_array.cpp  test_attributes_scalar.cpp  test_nodeobjects.cpp  tests.cpp
clients/cpp/: sal.hpp
clients/cppsal/: CMakeLists.txt  LICENCE.txt
clients/cppsal/cMake/: IdentifyOS.cmake
clients/cppsal/doc/: Installation.md
clients/cppsal/examples/: CMakeLists.txt  demo.cpp  sal_signal.h
clients/cppsal/include/: sal.h  sal_c.h  sal_client.h  sal_data.h  sal_data_object.h  sal_node.h  sal_signal.h
clients/cppsal/src/: CMakeLists.txt
clients/cppsal/tests/: CMakeLists.txt  makefile  test_attributes.cpp  test_data_object.cpp  test_nodeobjects.cpp  test_sal.h  test_signal.cpp
clients/csal/: Makefile  csal_attrib.cpp  csal_node.cpp
clients/csal/include/csal/: csal.h
clients/csal/include/csal/detail/: csal_attrib.h  csal_client.h
clients/csal/test/: Makefile  main.c  test_suite.c  test_suite.h
clients/expts/: readme.md
clients/expts/jsontest/: jsontest.cpp  makefile
dev_doc/design_doc/: large_data_objects.md
doc/: Makefile
doc/source/: clients.rst  conf.py  datamodel.rst  index.rst  server.rst
doc/source/client/: c.rst  python.rst
doc/source/datamodel/: dataclasses.rst  datatree.rst
doc/source/datamodel/dataclasses/: array.rst  dictionary.rst  scalar.rst  signal.rst  string.rst
doc/source/server/: deployment.rst  development.rst  rest_api.rst
resources/: PresentationTemplate.otp
sal/client/: __init__.py  main.py
sal/core/: exception.py  path.py  serialise.py  time.py  version.py
sal/core/object/: __init__.py  branch.py  dataclass.py  node.py  node_report.py  report.py
sal/core/tests/: test_path.py
sal/dataclass/core/: __init__.py  array.py  dictionary.py  scalar.py  string.py
sal/dataclass/core/tests/: test_array.py  test_dictionary.py
sal/dataclass/signal/: __init__.py  signal.py  subobject.py
sal/dataclass/signal/dimension/: __init__.py  array.py  base.py  calculated.py
sal/dataclass/signal/error/: __init__.py  asymmetric.py  base.py  constant.py  symmetric.py
sal/dataclass/signal/mask/: __init__.py  array.py  base.py  scalar.py
sal/server/: __init__.py  api.py  auth.py  main.py
sal/server/interface/: __init__.py  authentication.py  authorisation.py  persistence.py
sal/server/providers/: __init__.py  ldap.py
sal/server/resource/: __init__.py  authenticator.py  data.py  permission.py  root.py
sal/server/tests/unit/: test_data.py
sal/tests/client/: conftest.py
sal/tests/client/functional/: test_operations.py
sal/tests/client/unit/: test_auth.py  test_host.py  test_request.py  test_response.py
sal/tests/core/functional/: test_dataclass_registration.py  test_serialisation_symmetry.py
sal/tests/core/unit/: test_path.py  test_serialise.py
sal/tests/dataclass/: conftest.py  test_common.py
sal/tests/dataclass/unit/: test_array_dimension.py  test_calculated_dimension.py  test_common.py  test_dictionary.py  test_scalar.py  test_signal.py
sal/tests/server/: conftest.py  constants.py
sal/tests/server/functional/: test_exceptions.py  test_resources.py
sal/tests/server/unit/: conftest.py  test_auth.py  test_authenticator.py  test_data.py  test_ldap.py  test_server.py
